Kubernetes/rmq-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: "rabbitmq:management"
          ports:
            - name: rmq-port
              containerPort: 5672
            - name: rmq-port-ui
              containerPort: 15672 # RabbitMQ Management UI
