Kubernetes/stock-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-service
  template:
    metadata:
      labels:
        app: stock-service
    spec:
      containers:
        - name: stock-service
          image: nadiah92/flowcart.stock-service # Replace with your image
          ports:
            - containerPort: 8081
