Kubernetes/rmq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
      name: rmq-port
    - port: 15672
      targetPort: 15672
      name: rmq-port-ui
  type: ClusterIP
