Kubernetes/stock-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  selector:
    app: stock-service
  ports:
    - port: 8081
      targetPort: 8081
